--- a/pages/ร้านอาหารแนะนำ.md
+++ b/pages/ร้านอาหารแนะนำ.md
@@ -2,10 +2,10 @@
 layout: page
 show_meta: false
 title: "ร้านอาหารแนะนำ"
-subheadline: "A Step-by-Step Guide"
+subheadline: "ร้านแนะนำ"
 description: "This step-by-step guide helps you to customize Feeling Responsive to your needs."
 header:
-   image_fullwidth: "header_hatyairoiroi"
+   image_fullwidth: "header_hatyai"
 permalink: "/ร้านอาหารแนะนำ/"
 ---
 1. [โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่][1] 
