--- a/pages/ร้านอาหารแนะนำ.md
+++ b/pages/ร้านอาหารแนะนำ.md
@@ -1,12 +1,12 @@
 ﻿---
 layout: page
 show_meta: false
-title: "ร้านอาหารแนะนำ"
-subheadline: "ร้านแนะนำ"
+title: "Getting Started"
+subheadline: "A Step-by-Step Guide"
 description: "This step-by-step guide helps you to customize Feeling Responsive to your needs."
 header:
-   image_fullwidth: "header_hatyai"
-permalink: "/ร้านอาหารแนะนำ/"
+   image_fullwidth: "header_homepage_13.jpg"
+permalink: "/getting-started/"
 ---
 1. [โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่][1] 
 
