Update ของหวาน - ไอศครีม.md

--- a/pages/ของหวาน - ไอศครีม.md
+++ b/pages/ของหวาน - ไอศครีม.md
@@ -11,11 +11,12 @@ permalink: "/ของหวาน - ไอศครีม/"
 
 1. [บ้านไอติมหาดใหญ่-ไอติมแฮนเมด][15] 
 2. [ไทยไท ไอติมกะทิสด แสงทองหาดใหญ่][16] 
-
+3. [กินมันเดือย เลียบชุมทางหาดใหญ่][17]
 
 
 
 
  [15]: {{ site.url }}/documentation/
  [16]: {{ site.url }}/documentation/
+ [17]: {{.site.url }}/documentation/
 
