--- a/pages/เครื่องดื่มของกินเล่น.md
+++ b/pages/เครื่องดื่มของกินเล่น.md
@@ -1,11 +1,11 @@
 ---
 layout: page
 show_meta: false
-title: "เครื่องดื่มของกินเล่น"
+title: "เครื่องดื่มและของกินเล่น"
 description: "This step-by-step guide helps you to customize Feeling Responsive to your needs."
 header:
    image_fullwidth: "header_hatyai.jpg"
-permalink: "/เครื่องดื่มของกินเล่น/"
+permalink: "/เครื่องดื่มและของกินเล่น/"
 ---
 
 
