--- a/pages/ไทยไท.md
+++ b/pages/ไทยไท.md
@@ -1,9 +1,22 @@
 ---
 layout: page
 show_meta: false
-title: "ไทย-ไท"
+title: "ร้านไอศกรีมไทย-ไท"
 header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/ไทยไท/"
 ---
-1.
+image:
+    title: "ไทยไท1.jpg"
+	หากว่ากันตามสภาพอากาศในประเทศไทยแล้ว คงไม่มีอะไรเหมาะไปกว่าการได้รับประทานไอศกรีมเย็นๆสักถ้วยในวันที่อากาศร้อนอบอ้าว ร้านไอศกรีมไทย-ไท ใกล้โรงเรียนแสงทอง ที่เปิดให้บริการมานานกว่าสิบปี ไอศกรีมของร้านจะเป็นไอศกรีมกะทิสด รสชาติหวาน มัน พร้อมด้วยทอปปิ้งที่มีให้เลือกมากมาย โดยทอปปิ้งจะเน้นไปที่ขนมไทยต่างๆเช่น ฝอยทอง  ทองหยิบทองหยอด เป็นต้น รวมไปถึงผลไม้ต่างๆเช่น กล้วย ขนุนและอื่นๆอีกมากมาย
+image:
+    title: "ไทยไท2.jpg"
+image:
+    title: "ไทยไท3.jpg"
+บรรยากาศของร้านจะเป็นแบบเรียบง่าย สบายๆให้ความรู้สึกเหมือนรับประทานอยู่ที่บ้าน  มีการให้บริการที่ดี อีกทั้งยังมีบริการพิเศษโดยลูกค้าสามารถเขียนความคิด ความรู้สึก ณ ขณะนั้น ลงบนกระดาษแล้วสอดไว้ใต้กระจกบนโต๊ะ ส่วนราคาของไอศครีมนั้นจะอยู่ในช่วงราคา25-35บาทขึ้นอยู่กับจำนวนทอปปิ้งและจำนวนไอศครีมที่เราต้องการ
+image:
+    title: "ไทยไท4.jpg"
+ไอศครีมกะทิสดของร้านจะมี2แบบ แบบแรกคือ ไอศกรีมกะทิสดไข่แข็ง เป็นการนำไข่แดงราดลงบนไอศกรีมกะทิเย็นๆ เมื่อไข่โดนความเย็นก็จะแข็งทันที ความมันของไข่จะตัดกับความหวานของกะทิทำให้เกิดรสชาติกลมกล่อม อร่อยถูกปากจนเป็นที่นิยมสำหรับผู้คนทั่วไป
+image:
+    title: "ไทยไท5.jpg"
+หากไม่ชอบกลิ่นคาวของไข่ แบบที่สองจะเป็นไอศกรีมกะทิสดธรรมดา พร้อมด้วยทอปปิ้งต่างๆที่เลือกได้ตามใจชอบซึ่งจะช่วยเพิ่มรสชาติให้มีความหลากหลาย และช่วยให้อรรถรสในการรับประทานไอศกรีมมีความอร่อยมากยิ่งขึ้น
