--- a/pages/ไทยไท.md
+++ b/pages/ไทยไท.md
@@ -5,10 +5,7 @@ title: "ร้านไอศกรีมไทย-ไท"
 header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/ไทยไท/"
-image:
-    title: "ไทยไท1.jpg"
----
 
+---
+<img class="t60" src="{{ site.url }}/images/ไทยไท1.jpg">
 	หากว่ากันตามสภาพอากาศในประเทศไทยแล้ว คงไม่มีอะไรเหมาะไปกว่าการได้รับประทานไอศกรีมเย็นๆสักถ้วยในวันที่อากาศร้อนอบอ้าว ร้านไอศกรีมไทย-ไท ใกล้โรงเรียนแสงทอง ที่เปิดให้บริการมานานกว่าสิบปี ไอศกรีมของร้านจะเป็นไอศกรีมกะทิสด รสชาติหวาน มัน พร้อมด้วยทอปปิ้งที่มีให้เลือกมากมาย โดยทอปปิ้งจะเน้นไปที่ขนมไทยต่างๆเช่น ฝอยทอง  ทองหยิบทองหยอด เป็นต้น รวมไปถึงผลไม้ต่างๆเช่น กล้วย ขนุนและอื่นๆอีกมากมาย
-<ul class="clearing-thumbs small-block-grid-2" data-clearing>
-  <li><a href="{{ site.url }}/images/ไทยไท2.jpg"><img  class="th" src="{{ site.url }}/images/ไทยไท2.jpg"></a></li>
