--- a/pages/ไทยไท.md
+++ b/pages/ไทยไท.md
@@ -10,7 +10,7 @@ permalink: "/ไทยไท/"
 <img class="t60" src="{{ site.url }}/images/ไทยไท1.jpg">
 	หากว่ากันตามสภาพอากาศในประเทศไทยแล้วคงไม่มีอะไรเหมาะไปกว่าการได้รับประทานไอศกรีมเย็นๆสักถ้วยในวันที่อากาศร้อนอบอ้าว ร้านไอศกรีมไทย-ไท ใกล้โรงเรียนแสงทอง ที่เปิดให้บริการมานานกว่าสิบปี ไอศกรีมของร้านจะเป็นไอศกรีมกะทิสด รสชาติหวาน มัน พร้อมด้วยทอปปิ้งที่มีให้เลือกมากมาย โดยทอปปิ้งจะเน้นไปที่ขนมไทยต่างๆเช่น ฝอยทอง  ทองหยิบทองหยอด เป็นต้น รวมไปถึงผลไม้ต่างๆเช่น กล้วย ขนุนและอื่นๆอีกมากมาย
 
-<ul class="clearing-thumbs Medium-block-grid-2" data-clearing>
+<ul class="clearing-thumbs small-block-grid-2" data-clearing>
   <li><a href="{{ site.url }}/images/ไทยไท2.jpg"><img src="{{ site.url }}/images/ไทยไท2.jpg"></a></li>
   <li><a href="{{ site.url }}/images/ไทยไท3.jpg"><img src="{{ site.url }}/images/ไทยไท3.jpg"></a></li>
 </ul>
