--- a/pages/ไทยไท.md
+++ b/pages/ไทยไท.md
@@ -14,3 +14,9 @@ permalink: "/ไทยไท/"
   <li><a href="{{ site.url }}/images/ไทยไท2.jpg"><img src="{{ site.url }}/images/ไทยไท2.jpg"></a></li>
   <li><a href="{{ site.url }}/images/ไทยไท3.jpg"><img src="{{ site.url }}/images/ไทยไท3.jpg"></a></li>
 </ul>
+
+บรรยากาศของร้านจะเป็นแบบเรียบง่าย สบายๆให้ความรู้สึกเหมือนรับประทานอยู่ที่บ้าน  มีการให้บริการที่ดี อีกทั้งยังมีบริการพิเศษโดยลูกค้าสามารถเขียนความคิด ความรู้สึก ณ ขณะนั้น ลงบนกระดาษแล้วสอดไว้ใต้กระจกบนโต๊ะ ส่วนราคาของไอศครีมนั้นจะอยู่ในช่วงราคา25-35บาทขึ้นอยู่กับจำนวนทอปปิ้งและจำนวนไอศครีมที่เราต้องการ
+
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/ไทยไท4.jpg"><img src="{{ site.url }}/images/ไทยไท4.jpg"></a></li>
+</ul>
