--- a/pages/ไทยไท.md
+++ b/pages/ไทยไท.md
@@ -22,3 +22,13 @@ permalink: "/ไทยไท/"
   <li><a href="{{ site.url }}/images/ไทยไท4.jpg"><img src="{{ site.url }}/images/ไทยไท4.jpg"></a></li>
 </ul>
 </p>
+
+ไอศครีมกะทิสดของร้านจะมี2แบบ แบบแรกคือ ไอศกรีมกะทิสดไข่แข็ง เป็นการนำไข่แดงราดลงบนไอศกรีมกะทิเย็นๆ เมื่อไข่โดนความเย็นก็จะแข็งทันที ความมันของไข่จะตัดกับความหวานของกะทิทำให้เกิดรสชาติกลมกล่อม อร่อยถูกปากจนเป็นที่นิยมสำหรับผู้คนทั่วไป
+
+<p align="center">
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/ไทยไท5.jpg"><img src="{{ site.url }}/images/ไทยไท5.jpg"></a></li>
+</ul>
+</p>
+
+หากไม่ชอบกลิ่นคาวของไข่ แบบที่สองจะเป็นไอศกรีมกะทิสดธรรมดา พร้อมด้วยทอปปิ้งต่างๆที่เลือกได้ตามใจชอบซึ่งจะช่วยเพิ่มรสชาติให้มีความหลากหลาย และช่วยให้อรรถรสในการรับประทานไอศกรีมมีความอร่อยมากยิ่งขึ้น
