--- a/pages/ไทยไท.md
+++ b/pages/ไทยไท.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 show_meta: false
-title: <p align="center">ร้านไอศกรีมไทย-ไท</p>
+title: "ร้านไอศกรีมไทย-ไท"
 header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/ไทยไท/"
