--- a/pages/โอโออิ.md
+++ b/pages/โอโออิ.md
@@ -1,10 +1,35 @@
 ---
 layout: page
 show_meta: false
-title: "โอโออิ หาดใหญ่เคยไปหรือยัง?"
+title: "OOi Shabu & Sushi Buffet (โอโออิ)"
 description: "This step-by-step guide helps you to customize Feeling Responsive to your needs."
 header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/โอโออิ/"
 ---
-1.
+<img class="t20" src="{{ site.url }}/images/โอโออิ1.jpg">
+	ในปัจจุบันร้านอาหารแบบบุฟเฟต์ได้รับความนิยมอย่างมาก เพราะสามารถเลือกรับประทานอาหารเท่าไหร่ก็ได้ภายในราคาที่กำหนดไว้ โอโออิบุฟเฟต์ก็เป็นหนึ่งในนั้น โดยร้านจะตั้งอยู่ในย่านคลองเรียน1ซอย 15 เพชรเกษม ก่อนถึงรพ.กรุงเทพ โดยจุดเด่นที่สังเกตเห็นได้ชัดจะเป็น ปลาตัวสีเขียวตาโตๆซึ่งเป็นสัญลักษณ์ของร้านนๆอีกมากมาย
+
+<ul class="clearing-thumbs small-block-grid-2" data-clearing>
+  <li><a href="{{ site.url }}/images/โอโออิ2.jpg"><img src="{{ site.url }}/imagesโอโออิ2.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/โอโออิ3.jpg"><img src="{{ site.url }}/imagesโอโออิ3.jpg"></a></li>
+</ul>
+
+โดยทางร้านมีเมนูเนื้อให้เลือกหลากหลายไม่ว่าจะเป็น เนื้อหมู เนื้อไก่ เนื้อวัว รวมไปทั้งอาหารทะเลอย่างเช่น ปลา ปลาหมึก แมงกะพรุนเป็นต้น และยังมีเมนูยิบย่อยต่างๆเช่น ลูกชิ้น ซูชิ ไก่เทอริยากิ และเมนูทอดอื่นๆอีกมากมาย
+ส่วนน้ำดื่มจะให้บริการฟรี โดยมีน้ำอัดลมรสชาติต่างๆ น้ำหวานอีก3รสชาติ คือ เก๊กฮวย ชาเขียว ชามะนาวและน้ำเปล่า
+ของหวานนั้นทางร้านมีไอศรีมให้บริการหลักๆ4รสชาติ ได้แก่ ชอคโกแลต สตอเบอรี่ วนิลา และมะนาว
+วนไอศครีมที่เราต้องการ
+
+<p align="center">
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/โอโออิ4.jpg"><img src="{{ site.url }}/images/โอโออิ4.jpg"></a></li>
+</ul>
+</p>
+
+และอีกหนึ่งจุดเด่นของร้านก็คือน้ำซุปต้มเนื้อต่างๆ ทางร้านมีน้ำซุปให้เลือก3แบบ ได้แก่ หากนิยมรสชาติออกเค็มๆก็ต้องเลือกน้ำซุปมิโซะ หากต้องการรสชาติธรรมดาน้ำซุปน้ำใสจะเป็นตัวเลือกที่เหมาะสมที่สุด แต่ถ้าต้องการรสชาติเผ็ด เข้มข้นก็ควรจะเลือกน้ำซุปต้มยำที่มีรสชาติเข้มข้นถึงใจ ในส่วนของราคา ทางร้านจะคิดเป็นค่าหัวรายคน คนละ259บาท จำกัดเวลา1.30ชั่วโมง ผู้คนทั่วไป
+
+<p align="center">
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/โอโออิ5.jpg"><img src="{{ site.url }}/images/โอโออิ5.jpg"></a></li>
+</ul>
+</p>
