--- a/pages/โอโออิ.md
+++ b/pages/โอโออิ.md
@@ -11,8 +11,8 @@ permalink: "/โอโออิ/"
 	ในปัจจุบันร้านอาหารแบบบุฟเฟต์ได้รับความนิยมอย่างมาก เพราะสามารถเลือกรับประทานอาหารเท่าไหร่ก็ได้ภายในราคาที่กำหนดไว้ โอโออิบุฟเฟต์ก็เป็นหนึ่งในนั้น โดยร้านจะตั้งอยู่ในย่านคลองเรียน1ซอย 15 เพชรเกษม ก่อนถึงรพ.กรุงเทพ โดยจุดเด่นที่สังเกตเห็นได้ชัดจะเป็น ปลาตัวสีเขียวตาโตๆซึ่งเป็นสัญลักษณ์ของร้านนๆอีกมากมาย
 
 <ul class="clearing-thumbs small-block-grid-2" data-clearing>
-  <li><a href="{{ site.url }}/images/โอโออิ2.jpg"><img src="{{ site.url }}/imagesโอโออิ2.jpg"></a></li>
-  <li><a href="{{ site.url }}/images/โอโออิ3.jpg"><img src="{{ site.url }}/imagesโอโออิ3.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/โอโออิ2.jpg"><img src="{{ site.url }}/images/โอโออิ2.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/โอโออิ3.jpg"><img src="{{ site.url }}/images/โอโออิ3.jpg"></a></li>
 </ul>
 
 โดยทางร้านมีเมนูเนื้อให้เลือกหลากหลายไม่ว่าจะเป็น เนื้อหมู เนื้อไก่ เนื้อวัว รวมไปทั้งอาหารทะเลอย่างเช่น ปลา ปลาหมึก แมงกะพรุนเป็นต้น และยังมีเมนูยิบย่อยต่างๆเช่น ลูกชิ้น ซูชิ ไก่เทอริยากิ และเมนูทอดอื่นๆอีกมากมาย
