--- a/pages/โอโออิ.md
+++ b/pages/โอโออิ.md
@@ -26,7 +26,7 @@ permalink: "/โอโออิ/"
 </ul>
 </p>
 
-และอีกหนึ่งจุดเด่นของร้านก็คือน้ำซุปต้มเนื้อต่างๆ ทางร้านมีน้ำซุปให้เลือก3แบบ ได้แก่ หากนิยมรสชาติออกเค็มๆก็ต้องเลือกน้ำซุปมิโซะ หากต้องการรสชาติธรรมดาน้ำซุปน้ำใสจะเป็นตัวเลือกที่เหมาะสมที่สุด แต่ถ้าต้องการรสชาติเผ็ด เข้มข้นก็ควรจะเลือกน้ำซุปต้มยำที่มีรสชาติเข้มข้นถึงใจ ในส่วนของราคา ทางร้านจะคิดเป็นค่าหัวรายคน คนละ259บาท จำกัดเวลา1.30ชั่วโมง ผู้คนทั่วไป
+และอีกหนึ่งจุดเด่นของร้านก็คือน้ำซุปต้มเนื้อต่างๆ ทางร้านมีน้ำซุปให้เลือก3แบบ ได้แก่ หากนิยมรสชาติออกเค็มๆก็ต้องเลือกน้ำซุปมิโซะ หากต้องการรสชาติธรรมดาน้ำซุปน้ำใสจะเป็นตัวเลือกที่เหมาะสมที่สุด แต่ถ้าต้องการรสชาติเผ็ด เข้มข้นก็ควรจะเลือกน้ำซุปต้มยำที่มีรสชาติเข้มข้นถึงใจ ในส่วนของราคา ทางร้านจะคิดเป็นค่าหัวรายคน คนละ259บาท จำกัดเวลา1.30ชั่วโมง
 
 <p align="center">
 <ul class="clearing-thumbs small-block-grid-1" data-clearing>
