Update ของหวาน - ไอศครีม.md

--- a/pages/ของหวาน - ไอศครีม.md
+++ b/pages/ของหวาน - ไอศครีม.md
@@ -16,7 +16,7 @@ permalink: "/ของหวาน - ไอศครีม/"
 
 
 
- [15]: {{ site.url }}/documentation/
- [16]: {{ site.url }}/documentation/
- [17]: {{.site.url }}/documentation/
+ [15]: {{ site.url }}//
+ [16]: {{ site.url }}/ไทยไท/
+ [17]: {{.site.url }}//
 
