--- a/pages/บุฟเฟ่ต์จัดหนัก.md
+++ b/pages/บุฟเฟ่ต์จัดหนัก.md
@@ -16,6 +16,6 @@ permalink: "/บุฟเฟ่ต์จัดหนัก/"
 
 
 
- [11]: {{ site.url }}/documentation/
- [12]: {{ site.url }}/documentation/
+ [11]: {{ site.url }}/โอโออิ/
+ [12]: {{ site.url }}//
 
