--- a/pages/ร้านอาหารแนะนำ.md
+++ b/pages/ร้านอาหารแนะนำ.md
@@ -24,13 +24,13 @@ permalink: "/ร้านอาหารแนะนำ/"
 
 
 
- [1]: {{ site.url }}/documentation/
- [2]: {{ site.url }}/documentation/
- [3]: {{ site.url }}/documentation/
- [4]: {{ site.url }}/documentation/
- [5]: {{ site.url }}/documentation/
- [6]: {{ site.url }}/documentation/
- [7]: {{ site.url }}/documentation/
- [8]: {{ site.url }}/documentation/
- [9]: {{ site.url }}/documentation/
- [10]: {{ site.url }}/documentation/
+ [1]: {{ site.url }}//
+ [2]: {{ site.url }}//
+ [3]: {{ site.url }}//
+ [4]: {{ site.url }}//
+ [5]: {{ site.url }}//
+ [6]: {{ site.url }}//
+ [7]: {{ site.url }}//
+ [8]: {{ site.url }}//
+ [9]: {{ site.url }}//
+ [10]: {{ site.url }}//
