--- a/pages/เซอคัส.md
+++ b/pages/เซอคัส.md
@@ -6,4 +6,4 @@ header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/เซอคัส/"
 ---
-1.
+<img class="t20" src="{{ site.url }}/images/เซอคัส.jpg">
