--- a/pages/แก๊สโซลีน.md
+++ b/pages/แก๊สโซลีน.md
@@ -6,4 +6,4 @@ header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/แก๊สโซลีน/"
 ---
-1.
+<img class="t20" src="{{ site.url }}/images/แก๊สโซลีน.jpg">
