--- a/pages/ของหวาน - ไอศครีม.md
+++ b/pages/ของหวาน - ไอศครีม.md
@@ -11,12 +11,12 @@ permalink: "/ของหวาน - ไอศครีม/"
 
 1. [บ้านไอติมหาดใหญ่-ไอติมแฮนเมด][15] 
 2. [ไทยไท ไอติมกะทิสด แสงทองหาดใหญ่][16] 
-3. [กินมันเดือย เลียบชุมทางหาดใหญ่][17]
+3. [บัวลอยแม่เลื่อน หน้าธิดา][17]
 
 
 
 
  [15]: {{ site.url }}//
  [16]: {{ site.url }}/ไทยไท/
- [17]: {{.site.url }}//
+ [17]: {{.site.url }}/บัวลอยแม่เลื่อน/
 
