--- a/บัวลอยแม่เลื่อน.md
+++ b/บัวลอยแม่เลื่อน.md
@@ -6,4 +6,18 @@ header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/บัวลอยแม่เลื่อน/"
 ---
-1.
+<img class="t20" src="{{ site.url }}/images/บัวลอย1.jpg">
+	บัวลอยแม่เลื่อนหรือที่เรียกกันติดปากว่าบัวลอยหน้าธิดาเป็นเพราะว่าร้านตั้งอยู่ใกล้กับโรงเรียนธิดานุเคราะห์ เปิดให้บริการมานานตั้งแต่ยังเป็นรถเข็นจนในปัจจุบันกลายเป็นมีหน้าร้าน เป็นห้องแถว1ห้อง บรรยากาศโดยรอบร้านจะเป็นลักษณะของร้านข้างถนน มีพื้นที่มากและเปิดโล่งเหมาะแก่การนั่งรับประทานของหวานและพักผ่อนหย่อนใจ ร้านจะเปิดให้บริการตั้งแต่ช่วงเย็นเป็นต้นไป
+<p align="center">
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/บัวลอย2.jpg"><img src="{{ site.url }}/images/บัวลอย2.jpg"></a></li>
+</ul>
+</p>
+
+เมนูของหวานของร้านมีหลากหลายไม่ว่าจะเป็น สลิ่มทับทิมกรอบ เฉาก๊วยนมสด เต้าทึง รากบัว และแป๊ะก๋วยแต่เมนูแนะนำของร้านก็คือบัวลอยไข่หวานและบัวลอยไข่เค็ม กลมกล่อมด้วยน้ำกะทิที่หวานกำลังดีตัดกับความคาวของไข่และยังมีทีเด็ดที่แป้งบัวลอยที่เหนียว หนึบหนับ เคี้ยวอร่อย มีราคาเพียงแค่20-35บาท ทำให้เป็นที่ถูกอกถูกใจแก่คนทั่วไป แนะนำว่าถ้าไม่อยากรอคิวนานๆให้รีบไปช่วงร้านเปิดหรือช่วงดึกที่ร้านกำลังจะปิดเพราะร้านบัวลอยแม่เลื่อนมีลูกค้าประจำที่ถูกอกถูกใจกับเมนูของทางร้านเป็นจำนวนมากการ
+
+<ul class="clearing-thumbs small-block-grid-2" data-clearing>
+  <li><a href="{{ site.url }}/images/บัวลอย3.jpg"><img src="{{ site.url }}/images/บัวลอย3.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/บัวลอย4.jpg"><img src="{{ site.url }}/images/บัวลอย4.jpg"></a></li>
+</ul>
+
