--- a/pages/เกาเหลาป้าเขียว.md
+++ b/pages/เกาเหลาป้าเขียว.md
@@ -6,4 +6,18 @@ header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/เกาเหลาป้าเขียว/"
 ---
-1.
+<img class="t20" src="{{ site.url }}/images/เกาเหลา1.jpg">
+	เกาเหลาป้าเขียว  ร้านอาหารสำหรับคนคนกลางคืน โดยร้านตั้งอยู่ที่ถนน ศุภสารรังสรรค์(เยื้องร้านเจฟเฟอร์) เปิดให้บริการตั้งแต่ช่วงเย็นจนถึงตี2 โดยเมนูแนะนำของร้านจะเป็นเกาเหลาเครื่องในหมูสับใบตำลึงรับประทานคู่กับข้าวสวยร้อนๆ โดยเครื่องนั้นมีทั้ง ปอด ตับ หัวใจ ไส้ เลือด หมูชิ้นและหมูสับโดยเราสามารถเลือกได้ว่าจะใส่หรือไม่ใส่อะไร หรือจะเน้นใส่อะไรเป็นพิเศษและยังมีบะหมี่เครื่องในเป็นเมนูเพิ่มเติม ทางร้านนั้นจะเน้นรสชาติของเกาเหลาเป็นหลัก สามารถทานได้โดยไม่ต้องปรุงรส 
+
+<ul class="clearing-thumbs small-block-grid-2" data-clearing>
+  <li><a href="{{ site.url }}/images/เกาเหลา2.jpg"><img src="{{ site.url }}/images/เกาเหลา2.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/เกาเหลา3.jpg"><img src="{{ site.url }}/images/เกาเหลา3.jpg"></a></li>
+</ul>
+
+บรรยากาศของร้านเป็นลักษณะห้องแถว1ห้อง  หน้าร้านเป็นรถเข็นสำหรับทำอาหาร มีโต๊ะประมาณ7-8โต๊ะ ซึ่งจะมีลูกค้าหมุนเวียนมาใช้บริการอย่างต่อเนื่อง บางครั้งอาจจะต้องรอคิวบ้าง ส่วนในเรื่องของราคานั้น เกาเหลาธรรมดาจะราคา60บาทแต่เกาเหลาพิเศษราคาจะเพิ่มขึ้นเป็น80บาทเลยทีเดียวซึ่งราคานั้นก็เหมาะสมกับปริมาณเกาเหลาที่ได้รับ 
+
+<p align="center">
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/เกาเหลา4.jpg"><img src="{{ site.url }}/images/เกาเหลา4.jpg"></a></li>
+</ul>
+</p>
