--- a/pages/ร้านอาหารแนะนำ.md
+++ b/pages/ร้านอาหารแนะนำ.md
@@ -30,7 +30,7 @@ permalink: "/ร้านอาหารแนะนำ/"
  [4]: {{ site.url }}//
  [5]: {{ site.url }}//
  [6]: {{ site.url }}//
- [7]: {{ site.url }}//
+ [7]: {{ site.url }}/เกาเหลาป้าเขียว/
  [8]: {{ site.url }}//
  [9]: {{ site.url }}//
  [10]: {{ site.url }}//
