--- a/pages/เหน็บชา.md
+++ b/pages/เหน็บชา.md
@@ -1,9 +1,33 @@
 ---
 layout: page
 show_meta: false
-title: "เหน็บชา"
+title: "เหน็บชา CAFFEINE"
 header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/เหน๊บชา/"
 ---
-1.
+<img class="t20" src="{{ site.url }}/images/เหน็บชา1.jpg">
+	ปัจจุบันร้านเครื่องดื่มชาและชาไข่มุกผุดขึ้นเป็นดอกเห็ด มีจำนวนมากมายหลายร้านตามข้างถนน ข้างทางรถผ่าน แต่ถ้าจะให้หาร้านที่เปิดให้บริการและครองใจลูกค้ามาอย่างยาวนานนั้นแทบจะหาไม่ได้เพราะลูกค้าของร้านประเภทนี้จะมาไวไปไวและเป็นลูกค้าประเภทขาจรเป็นส่วนมาก แต่ไม่ใช่กับร้านเหน็บชา ทางร้านเปิดให้บริการมาปีนี้ขึ้นเป็นปีที่5แล้ว สาเหตุที่ร้านเหน็บชาครองใจลูกค้ามาอย่างยาวนานเป็นเพราะ พนักงานประจำร้านทุกคนยิ้มแย้มแจ่มใส พุดคุยทักทาย เป็นกันเองกับลูกค้า ลูกค้าสามารถติชมเรื่องรสชาติของเครื่องดื่มได้โดยตรงรุงรส 
+
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/เหน็บชา2.jpg"><img src="{{ site.url }}/images/เหน็บชา2.jpg"></a></li>
+</ul>
+
+<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+  <li><a href="{{ site.url }}/images/เหน็บชา3.jpg"><img src="{{ site.url }}/images/เหน็บชา3.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/เหน็บชา4.jpg"><img src="{{ site.url }}/images/เหน็บชา4.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/เหน็บชา5.jpg"><img src="{{ site.url }}/images/เหน็บชา5.jpg"></a></li>
+</ul>
+
+อีกทั้งยังมีเมนูหลากหลาย ทั้งเมนูกาแฟสดต่างๆเช่น เอสเปรสโซ่ อเมริกาโน่ คาปูชิโน่เป็นต้น  เมนูชา หลากหลายรสชาติ เช่นชาซีลอน โกโก้ ชาเขียวรวมไปถึงน้ำหวานอย่างเฮลบลูบอย โอวัลตินไมโลและนมเย็นและเครื่องดื่มรสชาติอื่นๆอีกมากมายและจุดสำคัญที่ทำให้ทางร้านตอบสนองต่อความต้องการของลูกค้าได้ตรงต่อความต้องการที่สุดคือมีการกำหนดระดับความหวานของเครื่องดื่มไว้ที่ 5Level ลูกค้าต้องการให้เครื่องดื่มมีระดับความหวานระดับไหนสามารถเลือกเลเวลได้ตามใจชอบ
+
+<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+  <li><a href="{{ site.url }}/images/เหน็บชา6.jpg"><img src="{{ site.url }}/images/เหน็บชา6.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/เหน็บชา7.jpg"><img src="{{ site.url }}/images/เหน็บชา7.jpg"></a></li>
+</ul>
+
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/เหน็บชา8.jpg"><img src="{{ site.url }}/images/เหน็บชา8.jpg"></a></li>
+</ul>
+
+รูปแบบการให้บริการของร้านเป็นแบบซื้อกลับแต่ก็มีมุมพักผ่อนบรรยากาศร่มรื่นใกล้ชิดธรรมชาติไว้ให้บริการสำหรับลูกค้าที่ต้องการหาที่นั่ง ดื่มชา พักผ่อนหย่อนใจและทางร้านอนุญาติให้นำอาหารอื่นๆเข้ามารับประทานในร้านได้อีกด้วย ทางร้านเปิดให้บริการเวลา12.00-21.30น.(หยุดบริการทุกวันเสาร์)
