--- a/pages/ร้านอาหารแนะนำ.md
+++ b/pages/ร้านอาหารแนะนำ.md
@@ -10,27 +10,11 @@ permalink: "/ร้านอาหารแนะนำ/"
 
 
 1. [โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่][1] 
-2. [โกอ้วนกับซาลาเปาทอดชื่อดังหาดใหญ่][2] 
-3. [ก๋วยเตี๋ยวหมูย่างซอยลึกลับหาดใหญ่][3] 
-4. [เที่ยวดึกแวะข้าวต้มซอย 3 หาดใหญ่][4] 
-5. [ส้มตำชบาหาดใหญ่ นั่งกินห้องแอร์][5] 
-6. [ไก่ทอดหาดใหญ่ ต้องไก่ทอดเดชา][6] 
-7. [เกาเหลาเลือดหมูป้าเขียว][7] 
-8. [หมูปิ้งตี 2 ไม่นอนก็มากิน][8] 
-9. [ราดหน้าโกฉ่อน ที่เปิดมายาวนาน][9] 
-10. [ข.ไข่ รวมเมนูไข่][10] 
+2. [เกาเหลาเลือดหมูป้าเขียว][7] 
 
 
 
 
 
- [1]: {{ site.url }}//
- [2]: {{ site.url }}//
- [3]: {{ site.url }}//
- [4]: {{ site.url }}//
- [5]: {{ site.url }}//
- [6]: {{ site.url }}//
+ [1]: {{ site.url }}/ก๋วยเตี๋ยวท้าพิสูจน์/
  [7]: {{ site.url }}/เกาเหลาป้าเขียว/
- [8]: {{ site.url }}//
- [9]: {{ site.url }}//
- [10]: {{ site.url }}//
