--- a/pages/เซอคัส.md
+++ b/pages/เซอคัส.md
@@ -7,3 +7,14 @@ header:
 permalink: "/เซอคัส/"
 ---
 <img class="t20" src="{{ site.url }}/images/เซอคัส.jpg">
+
+ถามถึงร้านนี้ น้อยคนที่จะไม่รู้จัก  มีมุมถ่ายรูป และ เป็นจุดเช๊คอินที่นิยมกันมากเลยทีเดียว
+นั่นคือ Circus music circle  หรือร้านเซอคัส นั่นเอง  (หนุ่ม สาว มหาลัย ไปนั่งกันเยอะ และ
+บ่อยมากเลย ขอบอก ) เป็นที่ผ่อนคลาย พักผ่อนจากการทำงาน ได้ดีเลย
+สำหรับวัยรุ่น หรือผู้ใหญ่ ก็มีบ้างที่มานั่งเชียร์การแข่งขันฟุตบอลกัน  นั่งฟังเพลงสบายๆ พร้อมเครื่องดื่มเย็นๆ ที่มีเลือกมากมาย
+ ( แต่หลักๆเห็นจะเป็น เชียร์เบียร์ จาก เบียร์ช้าง )  บรรยากาศร้าน ด้านในอาจจะแคบไปสักนิด เนื่องด้วยเป็นโดมผ้าเต้นท์ และ 
+จำนวนโต๊ะเยอะ ติดๆกัน อาจจะลุกเดินลำบากสักหน่อยนึง  นั่งด้านนอก เห็นท่าจะสบายกว่า โล่งกว่า  
+	อาหาร ก็ธรรมดา ๆ ออกจะเป็นกับแกล้ม ราคาไม่แพงมาก  ไปเน้นทางเครื่องดื่มมากกว่า 
+อ้อ พูดถึงที่จอดรถ กว้างมาก รองรับรถได้จำนวนเยอะๆ ทั้งรถยนต์ รถจักรยานยนต์  ถือว่า สะดวกสบายมากเลยทีเดียว
+
+ถ้าหากจะไปสังค์สรรค์ นั่งชิว พักผ่อน ผ่อนคลาย ด้วยการฟังเพลงไป จิบเครื่องดื่มไป  แนะนำ Circus music circle
