--- a/pages/เซอคัส.md
+++ b/pages/เซอคัส.md
@@ -18,3 +18,8 @@ permalink: "/เซอคัส/"
 อ้อ พูดถึงที่จอดรถ กว้างมาก รองรับรถได้จำนวนเยอะๆ ทั้งรถยนต์ รถจักรยานยนต์  ถือว่า สะดวกสบายมากเลยทีเดียว
 
 ถ้าหากจะไปสังค์สรรค์ นั่งชิว พักผ่อน ผ่อนคลาย ด้วยการฟังเพลงไป จิบเครื่องดื่มไป  แนะนำ Circus music circle
+
+<ul class="clearing-thumbs small-block-grid-2" data-clearing>
+  <li><a href="{{ site.url }}/images/เซอคัส2.jpg"><img src="{{ site.url }}/images/เซอคัส2.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/เซอคัส3jpg"><img src="{{ site.url }}/images/เซอคัส3.jpg"></a></li>
+</ul>
