--- a/pages/แก๊สโซลีน.md
+++ b/pages/แก๊สโซลีน.md
@@ -7,3 +7,14 @@ header:
 permalink: "/แก๊สโซลีน/"
 ---
 <img class="t20" src="{{ site.url }}/images/แก๊สโซลีน.jpg">
+
+เป็นร้านเปิดใหม่ที่ถือว่า ได้รับการตอบรับอย่างดี เป็นที่นิยม และชื่นชอบได้อย่างรวดเร็ว  
+ร้านแก๊สโซลีน เพิ่งจะเปิดได้ไม่นานนัก ซึ่งตั้งอยู่ตรงข้าม หอประชุมนานาชาติ  สังเกตร้านง่ายๆเลย
+จะมีตัวหุ่น ซุปเปอร์ฮีโร่ ตกแต่งอยู่หลายตัวเลยทีเดียว (หน้าสุดนี่ ไอรอนแมน ผู้โด่งดัง) 
+  ภายในร้าน ตกแต่งให้ออกแนวแบบ ปั้มน้ำมัน เก่าๆ วินเทจ  ให้เข้ากับคอนเซปชื่อร้าน ใช้ถังทรงกลม มาเป็นโต๊ะ เก้าอี้ 
+อารมณ์แบบ ถังน้ำมัน ปั้มร้าง ประมาณนั้นได้เลย   ร้านถูกแบ่งเป็นชั้นล่าง และ ชั้นบน ซึ้งชั้นบนนี่ น่าจะเน้นนั่งชิวๆ สบายๆ
+เพื่อพูดคุยกัน ดูการแข่งฟุตบอลกัน   ส่วนด้านล่าง จะเป็นการแสดงดนตรีสด แนวสตริง ให้ฟังกันเพลินๆ สบายๆ 
+ไปพร้อมกับ การรับประทานอาหาร และดื่มเครื่องดื่มกัน   
+
+ร้านเปิดบริการตั้งแต่ประมาณ 6 โมงเย็น   ตกค่ำๆ ดึกๆ คนจะเยอะมาก แน่นร้าน ด้านในจะร้อนอบอ้าวหน่อย
+พัดลมเสา และพัดลมเพดาน จะไม่เพียงพอ  ทางร้านจะนำพัดลมมาเปิดให้ ถือว่าบริการดีมากๆ
