--- a/pages/ร้านอาหารแนะนำ.md
+++ b/pages/ร้านอาหารแนะนำ.md
@@ -11,10 +11,11 @@ permalink: "/ร้านอาหารแนะนำ/"
 
 1. [โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์หาดใหญ่][1] 
 2. [เกาเหลาเลือดหมูป้าเขียว][7] 
-
+3. [ไก่อ้วน][3]
 
 
 
 
  [1]: {{ site.url }}/ก๋วยเตี๋ยวท้าพิสูจน์/
  [7]: {{ site.url }}/เกาเหลาป้าเขียว/
+ [3]: {{.site.url }}/ไก่อ้วน/
