--- a/pages/ยิ้มละไม.md
+++ b/pages/ยิ้มละไม.md
@@ -1,10 +1,10 @@
 ---
 layout: page
 show_meta: false
-title: "ร้านไอศกรีมไทย-ไท"
+title: "ร้านยิ้มละไม"
 header:
    image_fullwidth: "header_hatyai.jpg"
-permalink: "/ไทยไท/"
+permalink: "/ยิ้มละไม/"
 
 ---
 ภายในโรงช้างมหาวิทยาลัยสงขลานครินทร์มีร้านอาหารอร่อยมากมายให้เลือกกินกันหลากหลายมาก วันนี้จึงขอแนะนำร้านเกี่ยวกับเครื่องดื่นบ้าง โดยร้านนี้ชื่อว่า ยิ้มละไม เป็นร้านขายเคื่องดื่มชา กาแฟ น้ำผลไม้ต่างๆ เยอะแยะมากมาย
