--- a/pages/ก๋วยเตี๋ยวท้าพิสูจน์.md
+++ b/pages/ก๋วยเตี๋ยวท้าพิสูจน์.md
@@ -1,9 +1,25 @@
 ---
 layout: page
 show_meta: false
-title: "โคตรท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์"
+title: "ท้าพิสูจน์ต้องลอง ก๋วยเตี๋ยวท้าพิสูจน์"
 header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/ก๋วยเตี๋ยวท้าพิสูจน์/"
 ---
-1.
+<img class="t20" src="{{ site.url }}/images/ก๋วยเตี๋ยวท้าพิสูจน์1.jpg">
+ก๋วยเตี๋ยวท้าพิสูจน์ เป็นร้านก๋วยเตี๋ยวที่รอให้ทุกๆคนไปพิสูจน์สมชื่อ
+ร้านนี้จะตั้งอยู่ที่ ถนนเพชรเกษม เยื้องกับ ตลาดนัดกรีนเวย์
+ร้านนี้จะเปิดปิดเวลา 9.30-19.30 น. ของทุกวัน ทางร้านจะมีก๋วยเตี๋ยวทั้ง
+น้ำใสแบบธรรมดา ไปจนถึงก๊วยเตี๋ยวรสแซ่บ อย่างเช่น ก๊วยเตี๋ยวต้มยำของ
+ร้านถือเป็น ก๊วยเตี๋ยวที่ใครมาแล้วก็ต้องลอง ไม่ว่าจะเป็นน้ำซุปที่แซ่บถึงใจ 
+และทั้งเครื่องที่จัดให้หนักๆล้นชามกันเลยทีเดียว ร้านนี้ยังมีร้านน้ำชาในร้านอีกด้วย
+บรรยากาศภายในร้าน จะมีพื้นที่ประมาณ 2 ห้อง จะประดับด้วยรูปภาพก๊วยเตี๋ยว 
+คนดังที่เคยมารับประทานที่ร้านนี้ รูปภาพไว้ดูเล่นสบายตา อีกทั้งโต๊ะจะเป็นโต๊ะไม้ 
+ส่วนเรื่องราคานั้น ก็ถือว่าพอประมาณกับก๊วยเตี๋ยวในแต่ละชามที่ได้มา
+งรส 
+
+<p align="center">
+<ul class="clearing-thumbs small-block-grid-1" data-clearing>
+  <li><a href="{{ site.url }}/images/ก๋วยเตี๋ยวท้าพิสูจน์2.jpg"><img src="{{ site.url }}/images/ก๋วยเตี๋ยวท้าพิสูจน์2.jpg"></a></li>
+</ul>
+</p>
