--- a/pages/โอโออิ.md
+++ b/pages/โอโออิ.md
@@ -8,7 +8,7 @@ header:
 permalink: "/โอโออิ/"
 ---
 <img class="t20" src="{{ site.url }}/images/โอโออิ1.jpg">
-	ในปัจจุบันร้านอาหารแบบบุฟเฟต์ได้รับความนิยมอย่างมาก เพราะสามารถเลือกรับประทานอาหารเท่าไหร่ก็ได้ภายในราคาที่กำหนดไว้ โอโออิบุฟเฟต์ก็เป็นหนึ่งในนั้น โดยร้านจะตั้งอยู่ในย่านคลองเรียน1ซอย 15 เพชรเกษม ก่อนถึงรพ.กรุงเทพ โดยจุดเด่นที่สังเกตเห็นได้ชัดจะเป็น ปลาตัวสีเขียวตาโตๆซึ่งเป็นสัญลักษณ์ของร้านนๆอีกมากมาย
+	ในปัจจุบันร้านอาหารแบบบุฟเฟต์ได้รับความนิยมอย่างมาก เพราะสามารถเลือกรับประทานอาหารเท่าไหร่ก็ได้ภายในราคาที่กำหนดไว้ โอโออิบุฟเฟต์ก็เป็นหนึ่งในนั้น โดยร้านจะตั้งอยู่ในย่านคลองเรียน1ซอย 15 เพชรเกษม ก่อนถึงรพ.กรุงเทพ โดยจุดเด่นที่สังเกตเห็นได้ชัดจะเป็น ปลาตัวสีเขียวตาโตๆซึ่งเป็นสัญลักษณ์ของร้าน
 
 <ul class="clearing-thumbs small-block-grid-2" data-clearing>
   <li><a href="{{ site.url }}/images/โอโออิ2.jpg"><img src="{{ site.url }}/images/โอโออิ2.jpg"></a></li>
@@ -17,8 +17,8 @@ permalink: "/โอโออิ/"
 
 โดยทางร้านมีเมนูเนื้อให้เลือกหลากหลายไม่ว่าจะเป็น เนื้อหมู เนื้อไก่ เนื้อวัว รวมไปทั้งอาหารทะเลอย่างเช่น ปลา ปลาหมึก แมงกะพรุนเป็นต้น และยังมีเมนูยิบย่อยต่างๆเช่น ลูกชิ้น ซูชิ ไก่เทอริยากิ และเมนูทอดอื่นๆอีกมากมาย
 ส่วนน้ำดื่มจะให้บริการฟรี โดยมีน้ำอัดลมรสชาติต่างๆ น้ำหวานอีก3รสชาติ คือ เก๊กฮวย ชาเขียว ชามะนาวและน้ำเปล่า
-ของหวานนั้นทางร้านมีไอศรีมให้บริการหลักๆ4รสชาติ ได้แก่ ชอคโกแลต สตอเบอรี่ วนิลา และมะนาว
-วนไอศครีมที่เราต้องการ
+ส่วนของหวานนั้นทางร้านมีไอศรีมให้บริการหลักๆ4รสชาติ ได้แก่ ชอคโกแลต สตอเบอรี่ วนิลา และมะนาว
+
 
 <p align="center">
 <ul class="clearing-thumbs small-block-grid-1" data-clearing>
