--- a/pages/เหน็บชา.md
+++ b/pages/เหน็บชา.md
@@ -7,7 +7,7 @@ header:
 permalink: "/เหน๊บชา/"
 ---
 <img class="t20" src="{{ site.url }}/images/เหน็บชา1.jpg">
-	ปัจจุบันร้านเครื่องดื่มชาและชาไข่มุกผุดขึ้นเป็นดอกเห็ด มีจำนวนมากมายหลายร้านตามข้างถนน ข้างทางรถผ่าน แต่ถ้าจะให้หาร้านที่เปิดให้บริการและครองใจลูกค้ามาอย่างยาวนานนั้นแทบจะหาไม่ได้เพราะลูกค้าของร้านประเภทนี้จะมาไวไปไวและเป็นลูกค้าประเภทขาจรเป็นส่วนมาก แต่ไม่ใช่กับร้านเหน็บชา ทางร้านเปิดให้บริการมาปีนี้ขึ้นเป็นปีที่5แล้ว สาเหตุที่ร้านเหน็บชาครองใจลูกค้ามาอย่างยาวนานเป็นเพราะ พนักงานประจำร้านทุกคนยิ้มแย้มแจ่มใส พุดคุยทักทาย เป็นกันเองกับลูกค้า ลูกค้าสามารถติชมเรื่องรสชาติของเครื่องดื่มได้โดยตรงรุงรส 
+	ปัจจุบันร้านเครื่องดื่มชาและชาไข่มุกผุดขึ้นเป็นดอกเห็ด มีจำนวนมากมายหลายร้านตามข้างถนน ข้างทางรถผ่าน แต่ถ้าจะให้หาร้านที่เปิดให้บริการและครองใจลูกค้ามาอย่างยาวนานนั้นแทบจะหาไม่ได้เพราะลูกค้าของร้านประเภทนี้จะมาไวไปไวและเป็นลูกค้าประเภทขาจรเป็นส่วนมาก แต่ไม่ใช่กับร้านเหน็บชา ทางร้านเปิดให้บริการมาปีนี้ขึ้นเป็นปีที่5แล้ว สาเหตุที่ร้านเหน็บชาครองใจลูกค้ามาอย่างยาวนานเป็นเพราะ พนักงานประจำร้านทุกคนยิ้มแย้มแจ่มใส พุดคุยทักทาย เป็นกันเองกับลูกค้า ลูกค้าสามารถติชมเรื่องรสชาติของเครื่องดื่มได้โดยตรง
 
 <ul class="clearing-thumbs small-block-grid-1" data-clearing>
   <li><a href="{{ site.url }}/images/เหน็บชา2.jpg"><img src="{{ site.url }}/images/เหน็บชา2.jpg"></a></li>
