--- a/pages/ยิ้มละไม.md
+++ b/pages/ยิ้มละไม.md
@@ -7,7 +7,7 @@ header:
 permalink: "/ยิ้มละไม/"
 
 ---
-ภายในโรงช้างมหาวิทยาลัยสงขลานครินทร์มีร้านอาหารอร่อยมากมายให้เลือกกินกันหลากหลายมาก วันนี้จึงขอแนะนำร้านเกี่ยวกับเครื่องดื่นบ้าง โดยร้านนี้ชื่อว่า ยิ้มละไม เป็นร้านขายเคื่องดื่มชา กาแฟ น้ำผลไม้ต่างๆ เยอะแยะมากมาย
+ภายในโรงช้างมหาวิทยาลัยสงขลานครินทร์มีร้านอาหารอร่อยมากมายให้เลือกกินกันหลากหลายมาก วันนี้จึงขอแนะนำร้านเกี่ยวกับเครื่องดื่มบ้าง โดยร้านนี้ชื่อว่า ยิ้มละไม เป็นร้านขายเครื่องดื่มชา กาแฟ น้ำผลไม้ต่างๆ เยอะแยะมากมาย
 <img class="t20" src="{{ site.url }}/images/ยิ้มละไม1.jpg">
 
 ร้านยิ้มละไม ตั้งอยู่บริเวณโรงช้างม.อ. เป็นร้านน้ำเล็กๆที่มีลูกค้าอยู่เนืองๆ ส่วนมากจะเป็นนักศึกษาสาวๆมาซื้อรับประทานกัน โดยบริเวณด้านข้างของร้านก็ยังมีขนมปังเย็นขายด้วย อีกทั้งยังมีที่นั่งให้รับประทาน วันไหนอากาศร่มรื่นจะน่านั่งเป็นพิเศษ
@@ -15,7 +15,7 @@ permalink: "/ยิ้มละไม/"
 
 <img class="t20" src="{{ site.url }}/images/ยิ้มละไม2.jpg">
 
-ผมจึงขอสั่งเมนูมาตรฐานของร้านนี้ซึ่งก็คือชานมไข่มุกนั่นเอง ซึ่งชานมไข่มุกของร้านนี้จะชงสดๆตรงนั้นเลยทำให้รสชาติชองนมกลมกล่อม ต่างจากเจ้าอื่นที่ชงไว้นานแล้วจึงไม่อร่อย
+ผมจึงขอสั่งเมนูมาตฐานร้านนี้ซึ่งก็คือชานมไข่มุกนั่นเอง ซึ่งชานมไข่มุกของร้านนี้จะชงสดๆตรงนั้นเลยทำให้รสชาติชองนมกลมกล่อม ต่างจากเจ้าอื่นที่ชงไว้นานแล้วจึงไม่อร่อย
 
 <img class="t20" src="{{ site.url }}/images/ยิ้มละไม3.jpg">
 
