--- a/บัวลอยแม่เลื่อน.md
+++ b/บัวลอยแม่เลื่อน.md
@@ -13,7 +13,7 @@ permalink: "/บัวลอยแม่เลื่อน/"
   <li><a href="{{ site.url }}/images/บัวลอย2.jpg"><img src="{{ site.url }}/images/บัวลอย2.jpg"></a></li>
 </ul>
 
-เมนูของหวานของร้านมีหลากหลายไม่ว่าจะเป็น สลิ่มทับทิมกรอบ เฉาก๊วยนมสด เต้าทึง รากบัว และแป๊ะก๋วยแต่เมนูแนะนำของร้านก็คือบัวลอยไข่หวานและบัวลอยไข่เค็ม กลมกล่อมด้วยน้ำกะทิที่หวานกำลังดีตัดกับความคาวของไข่และยังมีทีเด็ดที่แป้งบัวลอยที่เหนียว หนึบหนับ เคี้ยวอร่อย มีราคาเพียงแค่20-35บาท ทำให้เป็นที่ถูกอกถูกใจแก่คนทั่วไป แนะนำว่าถ้าไม่อยากรอคิวนานๆให้รีบไปช่วงร้านเปิดหรือช่วงดึกที่ร้านกำลังจะปิดเพราะร้านบัวลอยแม่เลื่อนมีลูกค้าประจำที่ถูกอกถูกใจกับเมนูของทางร้านเป็นจำนวนมากการ
+เมนูของหวานของร้านมีหลากหลายไม่ว่าจะเป็น สลิ่มทับทิมกรอบ เฉาก๊วยนมสด เต้าทึง รากบัว และแป๊ะก๋วยแต่เมนูแนะนำของร้านก็คือบัวลอยไข่หวานและบัวลอยไข่เค็ม กลมกล่อมด้วยน้ำกะทิที่หวานกำลังดีตัดกับความคาวของไข่และยังมีทีเด็ดที่แป้งบัวลอยที่เหนียว หนึบหนับ เคี้ยวอร่อย มีราคาเพียงแค่20-35บาท ทำให้เป็นที่ถูกอกถูกใจแก่คนทั่วไป แนะนำว่าถ้าไม่อยากรอคิวนานๆให้รีบไปช่วงร้านเปิดหรือช่วงดึกที่ร้านกำลังจะปิดเพราะร้านบัวลอยแม่เลื่อนมีลูกค้าประจำที่ถูกอกถูกใจกับเมนูของทางร้านเป็นจำนวนมาก
 
 <ul class="clearing-thumbs small-block-grid-2" data-clearing>
   <li><a href="{{ site.url }}/images/บัวลอย3.jpg"><img src="{{ site.url }}/images/บัวลอย3.jpg"></a></li>
