--- a/pages/แก๊สโซลีน.md
+++ b/pages/แก๊สโซลีน.md
@@ -15,5 +15,7 @@ permalink: "/แก๊สโซลีน/"
 อารมณ์แบบ ถังน้ำมัน ปั้มร้าง ประมาณนั้นได้เลย   ร้านถูกแบ่งเป็นชั้นล่าง และ ชั้นบน ซึ้งชั้นบนนี่ น่าจะเน้นนั่งชิวๆ สบายๆ
 เพื่อพูดคุยกัน ดูการแข่งฟุตบอลกันส่วนด้านล่าง จะเป็นการแสดงดนตรีสด แนวสตริงให้ฟังกันเพลินๆ สบายๆ ไปพร้อมกับการรับประทานอาารและเครื่องดื่ม
 
+<img class="t20" src="{{ site.url }}/images/แก๊สโซลีน2.jpg">
+
 ร้านเปิดบริการตั้งแต่ประมาณ 6 โมงเย็นตกค่ำๆดึกๆคนจะเยอะมากแน่นร้าน ด้านในจะร้อนอบอ้าวหน่อย
 พัดลมเสาและพัดลมเพดานจะไม่เพียงพอทางร้านจะนำพัดลมมาเปิดให้ถือว่าบริการดีมากๆ
