--- a/pages/เซอคัส.md
+++ b/pages/เซอคัส.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 show_meta: false
-title: "เซอคัส"
+title: "Circus Music Circle"
 header:
    image_fullwidth: "header_hatyai.jpg"
 permalink: "/เซอคัส/"
